// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form > renders a form component 1`] = `
<div>
  <div
    class="ui form"
  >
    <div
      id="blockform-fieldset-default"
    >
      <div
        class="ui segment form attached"
      >
        <div
          class="Field"
          id="title"
        >
          The title
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form > renders a form component with defaults in the schema - Checkboxes 1`] = `
<div>
  <div
    class="ui form"
  >
    <div
      id="blockform-fieldset-default"
    >
      <div
        class="ui segment form attached"
      >
        <div
          class="Field"
          id="theCheckBox"
        >
          The checkbox
        </div>
        <div
          class="Field"
          id="theTruthyCheckBox"
        >
          The truthy checkbox
        </div>
        <div
          class="Field"
          id="theFalsyCheckBox"
        >
          The falsy checkbox
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form > renders a form component with defaults in the schema - Default text field 1`] = `
<div>
  <div
    class="ui form"
  >
    <div
      id="blockform-fieldset-default"
    >
      <div
        class="ui segment form attached"
      >
        <div
          class="Field"
          id="title"
        >
          The title
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form > renders a form component with defaults in the schema - Number field 1`] = `
<div>
  <div
    class="ui form"
  >
    <div
      id="blockform-fieldset-default"
    >
      <div
        class="ui segment form attached"
      >
        <div
          class="Field"
          id="number"
        >
          The number, default set
        </div>
        <div
          class="Field"
          id="numberWithValue"
        >
          The number, default with a value
        </div>
      </div>
    </div>
  </div>
</div>
`;
